.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: timer-production
  name: timer-server
spec:
  selector:
    matchLabels:
      app: timer-server
  replicas: 1
  template:
    metadata:
      labels:
        app: timer-server
    spec:
      containers:
      - name: timer-server
        image: jaskaransarkaria/timer-server:1
        ports:
        - containerPort: 8080
