.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timer-server-service
spec:
  selector:
    app: timer-server
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
